	- Fix tracer visuals when the active vessel dies.
	- Adjust timing and conditions for auto-camera switching to and away from missiles.
	- Battle damage fuel leak rates now scale by (bullet caliber)^2, instead of (bullet caliber). Fuel leak rates for 20mm caliber remain the same, calibers higher and lower than 20mm will now have higher and lower leak rates, respectively.
- UI:
	- New Opacity option in BDA Team Icons to set icon opacity.
- AI / WM:
	- Invert the roll target when the fly-to direction is below and behind the craft within the Immelmann turn angle.
	- Fix automatic gun range adjustments in the WM again.
	- Prevent Orbital AI from changing attitude while launched missile is still near spacecraft.
- Weapons:
	- Corrections to penetration and ricochet velocity changes and ricochet positions.
	- Stop APS firing at dead missiles.
	- 'subProjectileCount' has been deprecated and replaced with 'projectileCount'; this specifies number of pellets per shot (for shotguns, etc) to make it more intuitive. Existing shotgun-type weapons will need to update their bulletDefs.
	- The subMunitionType field for beehive ammo now uses the syntax of "ammotype; quantity" (e.g. subMunitionType = 35x228AHEADPellet; 30) with number of projectiles released on detonation set here instead of the subMunition's bulletDef.
	- Fix the aiming reticles of guns (fixed and turrets) and auto-proxy-tracking when using MouseAimFlight (again).
	- Missiles:
		- Fix issue with Rotary Rails trying to use missiles that have previously been blown off from combat damage.
		- Fix issue with MultiMissilelauncher Turrets throwing an NRE when AI firing.
		- Fix mass changes of missiles that decouple boosters and add missile mass debug telemetry.
		- Fix radar and heat targeting leading targets excessively (most apparent in orbit).
		- Fix missile drag curve having negative drag at ~25 deg AoA.
		- Fix AI occasionally not firing radar missiles; Git Issue #573.