@@ -519,7 +519,7 @@ namespace BDArmory.WeaponMounts
                     }
                 }
                 UpdateMissileChildren(); //missile destroyed before it could be fired, remove from count
-                Debug.LogError("[BDArmory.BDRotaryRail]: No missiles found, but missile count is non-zero.");
+                Debug.LogWarning("[BDArmory.BDRotaryRail]: No missiles found, but missile count is non-zero.");
             }
         }
 
